Fix visible overflow in Chrome/Edge
Chromium-based browsers for some reason generate a horizontal overflow, which creates a horizontal scrollbar on the body element. There is no visible overflow, so this overflow can be hidden.

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ body {
 	font-size: var(--text-size);
 	animation: bg-animation 20s infinite alternate;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 @keyframes bg-animation {
